--- a/next/package.json
+++ b/next/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.9",
     "@react-spring/web": "^10.0.3",
     "axios": "^1.12.2",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
@@ -35,6 +36,7 @@
     "remark-rehype": "^11.1.2",
     "shiki": "^3.13.0",
     "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
